fixed button styling and some spacing issues on more-info;

--- a/admin/styles/more-info.css
+++ b/admin/styles/more-info.css
@@ -149,7 +149,7 @@ fieldset label {
 }
 
 .labellast {
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 fieldset h1 {
@@ -280,7 +280,7 @@ input#verified {
     font-size: 18px;
     padding: 5px;
     border: 2px solid black;
-    margin: 15px 0;
+    margin: 15px 0 0 0;
 }
 
 #inactive input:disabled {
@@ -314,14 +314,20 @@ input#verified {
 .photos-buttons input,
 .photos-add-div input {
     width: 79px;
-    border: none;
-    background: #cbd4c2;
-    color: #2b2e30;
-    border-radius: 8px;
-    padding: 10px 15px;
     font-size: 14px;
     margin: 0 10px 0 0;
     display: inline-block;
+    background-color: #01997b;
+    color: white;
+    -webkit-box-shadow: 1px 1px 8px 0 rgba(0,0,0,0.28);
+    -moz-box-shadow: 1px 1px 8px 0 rgba(0,0,0,0.28);
+    box-shadow: 1px 1px 8px 0 rgba(0,0,0,0.28);
+    padding: 10px 15px;
+    font-family: 'Raleway', sans-serif;
+    text-align: center;
+    border-radius: 5px;
+    font-weight: 600;
+    border: none;
 }
 
 .add-photo-popup input[type="button"] {
@@ -337,7 +343,7 @@ input#verified {
 }
 
 input[type="button"].selectedPhoto {
-    background: #01997b;
+    background: #00604D;
     color: white;
 }
 
@@ -357,6 +363,7 @@ input[type="button"].selectedPhoto {
 #photos-delete1,
 #photos-delete2 {
     margin: 0 0 0 60px;
+    background: #EF645F;
 }
 
 #photos {
@@ -372,9 +379,6 @@ input[type="button"].selectedPhoto {
     overflow: auto;
 }
 
-.photos-selected {
-    background-color: #F3C467
-}
 
 
 
@@ -467,13 +471,7 @@ input[type="button"].selectedPhoto {
     float: left;
     margin-left: 20px;
     margin-bottom: 20px;
-    border: none;
-    background: #01997b;
-    color: white;
-    border-radius: 5px;
-    padding: 10px 15px;
     font-size: 14px;
-    font-family: 'Raleway', sans-serif; 
 }
 
 #moreinfo-save {
@@ -489,19 +487,13 @@ input[type="button"].selectedPhoto {
 
 
 #moreinfo-save-button input {
-    border: none;
-    background: #ba0c2F;
-    color: white;
-    border-radius: 5px;
-    padding: 10px 15px;
     font-size: 14px;
     display: inline-block;
-    float: right; 
-/*    margin-right: 20px; */
+    float: right;
+    margin-right: 20px;
     margin-top: 0px;
     margin-bottom: 20px;
-    width: auto; 
-      
+    width: auto;
 }
 
 /*WEEKLY CHECKUP*/
